--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ad tempore assumenda id temporibus pariatur rem culpa reprehenderit, aperiam eum?
             </div>
         </div>
+
+        <div class="movie">
+            <img src="https://images.unsplash.com/photo-1713810309146-8fcfa17d700c?q=80&w=2068&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="image">
+
+            <div class="movie-info">
+                <h3>Movie Title</h3>
+                <span class="green">9.8</span>
+            </div>
+            <div class="overview">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ad tempore assumenda id temporibus pariatur rem culpa reprehenderit, aperiam eum?
+            </div>
+        </div>
     </main>
 
     <script src="script.js"></script>
