updated styles css file

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <span class="green">9.8</span>
             </div>
             <div class="overview">
+                <h3>Overview</h3>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ad tempore assumenda id temporibus pariatur rem culpa reprehenderit, aperiam eum?
             </div>
         </div>
